--- a/style.css
+++ b/style.css
@@ -1,35 +1,41 @@
-@import url('https://fonts.googleapis.com/css2?family=Palette+Mosaic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sunflower:wght@300&display=swap');
 
 /* * {
-    border: 1px red solid;
+    border: 1px gray solid;
 } */
 
 body {
     display: flex;
+    margin: 0;
     height: 100vh;
+    font-family: 'Sunflower', sans-serif;
+    font-size: 16px;
+    user-select: none;
 }
 
 .side {
+    width: 35vw;
     display: flex;
-    flex: 1;
     flex-direction: column;
-    background-color: green;
+    background-image: url("nini-bg.jpg");
     color: white;
 }
 
-.side .ctner {
+.side--ctner {
     display: flex;
     flex: 1;
     flex-direction: column;
     justify-content: center;
 }
 
-.side .ctner .logo {
+.side--ctner .logo {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 3.5rem;
-    font-family: 'Palette Mosaic', cursive;
+    font-family: 'Major Mono Display', monospace;
+    font-size: 4.5rem;
+    font-weight: bold;
     background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -41,5 +47,32 @@ body {
 }
 
 .main {
-    flex: 2;
+    width: 65vw;
+    padding:  2.5vw;
+    padding-right: 5vw;
+    display: flex;
+    align-items: center;
+    background-color: rgb(250, 250, 250);
+}
+
+.main--ctner {
+    display: flex;
+    flex-direction: column;
+    gap: 2vw;
+}
+
+.main--ctner .create-acc-btn {
+    align-self: flex-start;
+}
+
+.form {
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+    background-color: white;
+}
+
+.form--content {
+    font-size: .8em;
+    font-weight: bold;
+    letter-spacing: .1em;
+    text-transform: uppercase;
 }
