--- a/style.css
+++ b/style.css
@@ -6,12 +6,19 @@
 } */
 
 body {
+    --text: rgb(19, 19, 19);
+    --darkem: rgb(109, 65, 65);
+    --lightred: rgb(218, 85, 85);
+    --blocksize: 36rem;
     display: flex;
     margin: 0;
     height: 100vh;
     font-family: 'Sunflower', sans-serif;
-    font-size: 16px;
+    font-size: 18px;
     user-select: none;
+    font-weight: bold;
+    word-spacing: .12rem;
+    color: var(--text);
 }
 
 .side {
@@ -30,12 +37,12 @@ body {
 }
 
 .side--ctner .logo {
+    padding: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
     font-family: 'Major Mono Display', monospace;
     font-size: 4.5rem;
-    font-weight: bold;
     background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -48,31 +55,81 @@ body {
 
 .main {
     width: 65vw;
-    padding:  2.5vw;
-    padding-right: 5vw;
     display: flex;
     align-items: center;
     background-color: rgb(250, 250, 250);
 }
 
 .main--ctner {
+    width: inherit;
+    height: inherit;
     display: flex;
     flex-direction: column;
-    gap: 2vw;
 }
 
-.main--ctner .create-acc-btn {
-    align-self: flex-start;
+.main--ctner > * {
+    margin: 1.6rem 1.6rem 0 3.2rem;
+}
+
+.header--ctner {
+    width: var(--blocksize);
 }
 
 .form {
+    margin: 0;
+    margin-top: 1.75rem;
+    padding: 2rem;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
     background-color: white;
 }
 
+.form span:first-child {
+    font-size: 1.5rem;
+    color: var(--lightred);
+}
+
 .form--content {
-    font-size: .8em;
-    font-weight: bold;
-    letter-spacing: .1em;
+    display: grid;
+    margin-top: 2rem;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 1rem;
+    width: var(--blocksize);
+}
+
+.form--content--ctr {
+    display: flex;
+    flex-direction: column;
+    font-size: .65rem;
+    letter-spacing: .1rem;
     text-transform: uppercase;
+}
+
+.form--content--ctr input {
+    width: 14rem;
+    height: 1.25rem;
+}
+
+.create-acc-btn {
+    width: 12rem;
+    height: 2.75rem;
+    transition: .15s;
+    box-shadow: 0;
+    cursor: pointer;
+    background-color: var(--lightred);
+    color: white;
+    border: 0;
+    border-radius: .6rem;
+    font-size: 1rem;
+    font-weight: bold;
+    align-self: flex-start;
+}
+
+.create-acc-btn:hover {
+    text-shadow: 0 0 3px rgba(255, 255, 255, 0.6)
+}
+
+.login {
+    font-size: 1rem;
+    font-weight: 100;
 }
